some changes on index

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -148,7 +148,7 @@
                                 <div class="mb-2">
                                     <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/casal.png' %}" alt=""></i>
                                 </div>
-                                <h3 class="h4 mb-2">Quarto 02***</h3>
+                                <h3 class="h4 mb-2">Quarto 02*</h3>
                                 <p class="text-muted mb-0">2,50x4,50m - Cama de casal, armário espaçoso, escrivaninha, televisão e mesas de cabeceira. Porta de correr em duas folhas para acesso aos fundos do terreno. Área de 11,25m²</p>
                             </div>
                         </div>
@@ -303,52 +303,10 @@
                 </div>
             </section>
             <!-- Services-->
-            <section class="page-section" id="services">
+            <section class="backgrouded page-section" id="services">
                 <div class="container px-4 px-lg-5">
                     <h2 class="text-center mt-0">Por que comprar o Projeto CASA15?</h2>
                     <h3 class="section-subheading text-muted text-center">Apenas com o projeto completo e a Lista de Materiais você poderá construir barato, rápido e sem desperdício.</h3>
-                    <hr class="divider"/>
-                    <h3 class="text-center mt-0">O que você recebe:</h3>
-                    <hr class="divider"/>
-                    <div class="row">
-                        <div class="col-sm">
-                            <div class="card" style="width: 18rem;">
-                                <img class="card-img-top" src="{% static 'assets/img/arq.jpg' %}" alt="Card image cap">
-                                <div class="card-body">
-                                    <h5 class="card-title">Projeto de Arquitetura</h5>
-                                    <p class="card-text">Planta com as medidas e áreas de cada ambiente, detalhe de cada fiada do tijolinho ecologico, etc...</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm">
-                            <div class="card col-sm" style="width: 18rem;">
-                                <img class="card-img-top" src="{% static 'assets/img/est.jpg' %}" alt="Card image cap">
-                                <div class="card-body">
-                                    <h5 class="card-title">Projetos de Complemetares</h5>
-                                    <p class="card-text">Planta com as medidas e áreas de cada ambiente, detalhe de cada fiada do tijolinho ecologico, etc...</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm">
-                            <div class="card col-sm" style="width: 18rem;">
-                                <img class="card-img-top" src="{% static 'assets/img/est.jpg' %}" alt="Card image cap">
-                                <div class="card-body">
-                                    <h5 class="card-title">Projeto de Arquitetura</h5>
-                                    <p class="card-text">Planta com as medidas e áreas de cada ambiente, detalhe de cada fiada do tijolinho ecologico, etc...</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm">
-                            <div class="card col-sm" style="width: 18rem;">
-                                <img class="card-img-top" src="{% static 'assets/img/est.jpg' %}" alt="Card image cap">
-                                <div class="card-body">
-                                    <h5 class="card-title">Projeto de Arquitetura</h5>
-                                    <p class="card-text">Planta com as medidas e áreas de cada ambiente, detalhe de cada fiada do tijolinho ecologico, etc...</p>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
                 </div>
             </section>
 
