--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -11042,6 +11042,35 @@ header.masthead h1, header.masthead .h1 {
   }
 }
 
+.backgrounded {
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/bg-masthead.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+}
+.backgrounded h1, .backgrounded .h1 {
+  font-size: 2.25rem;
+}
+@media (min-width: 992px) {
+  .backgrounded {
+    height: 100vh;
+    min-height: 40rem;
+    padding-top: 4.5rem;
+    padding-bottom: 0;
+  }
+  .backgrounded p {
+    font-size: 1.15rem;
+  }
+  .backgrounded h1, .masthead .h1 {
+    font-size: 3rem;
+  }
+}
+@media (min-width: 1200px) {
+  .backgrounded h1, .backgrounded .h1 {
+    font-size: 3.5rem;
+  }
+}
 
 .timeline {
   position: relative;
