some changes on index

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -98,7 +98,7 @@
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <div class="mb-2">
-                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/jantar.png' %}" alt=""></i>
+                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/jantar.jpeg' %}" alt=""></i>
                                 </div>
                                 <h3 class="h4 mb-2">Sala Jantar</h3>
                                 <p class="text-muted mb-0">2,50x3,20m - Com bancada integrada à cozinha e sala de estar. É o compartimento de acesso à casa. Logo na entrada, um aparador com bar e parede com iluminação decorativa direcionada. A bancada é móvel, e sendo removida traz outro uso para cozinha e sala de jantar. Área de 8,00m².</p>
@@ -107,7 +107,7 @@
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <div class="mb-2">
-                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/estar.png' %}" alt=""></i>
+                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/estar.jpeg' %}" alt=""></i>
                                 </div>
                                 <h3 class="h4 mb-2">Sala Estar</h3>
                                 <p class="text-muted mb-0">2,63x2,18m - É integrada com a sala de jantar. O layout foi disposto de modo que a circulação não permita a interferência de passantes em frente à televisão. Área de 5,64m².</p>
@@ -116,7 +116,7 @@
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <div class="mb-2">
-                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/kitchen.png' %}" alt=""></i>
+                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/kitchen.jpeg' %}" alt=""></i>
                                 </div>
                                 <h3 class="h4 mb-2">Cozinha</h3>
                                 <p class="text-muted mb-0">1,50x3,88m - O layout em “L” da cozinha esconde a pia com a louça do almoço. Tem acesso pela sala de jantar ou área de serviço. Área 5,82m².</p>
@@ -125,7 +125,7 @@
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <div class="mb-2">
-                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/bwc.png' %}" alt=""></i>
+                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/bwc.jpeg' %}" alt=""></i>
                                 </div>
                                 <h3 class="h4 mb-2">Banheiro</h3>
                                 <p class="text-muted mb-0">1,75x1,88m - Espaçoso, entrada no corredor próximo aos quartos. Também na versão com layout acessível. Área 3,29m².</p>
@@ -136,7 +136,7 @@
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <div class="mb-2">
-                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/solteiro.png' %}" alt=""></i>
+                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/solteiro.jpeg' %}" alt=""></i>
                                 </div>
                                 <h3 class="h4 mb-2">Quarto 01</h3>
                                 <p class="text-muted mb-0">3,00x4,00m - Layout para duas camas solteiro, armário embutido, escrivaninha e mesas de cabeceira. Opção de janela ou porta de correr em duas folhas para acesso aos fundos do terreno. Área de 12,00m².
@@ -146,7 +146,7 @@
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <div class="mb-2">
-                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/casal.png' %}" alt=""></i>
+                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/casal.jpeg' %}" alt=""></i>
                                 </div>
                                 <h3 class="h4 mb-2">Quarto 02*</h3>
                                 <p class="text-muted mb-0">2,50x4,50m - Cama de casal, armário espaçoso, escrivaninha, televisão e mesas de cabeceira. Porta de correr em duas folhas para acesso aos fundos do terreno. Área de 11,25m²</p>
@@ -155,7 +155,7 @@
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <div class="mb-2">
-                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/circ.png' %}" alt=""></i>
+                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/circ.jpeg' %}" alt=""></i>
                                 </div>
                                 <h3 class="h4 mb-2">Circulação</h3>
                                 <p class="text-muted mb-0">1,13x2,75m - Largura generosa, facilita a circulação de móveis e a decoração do ambiente. Área 3,11m².</p>
@@ -164,7 +164,7 @@
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <div class="mb-2">
-                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/lavanderia.png' %}" alt=""></i>
+                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/lavanderia.jpeg' %}" alt=""></i>
                                 </div>
                                 <h3 class="h4 mb-2">Área de Serviço</h3>
                                 <p class="text-muted mb-0">1,50x4,00m - Coberta, servida de espaços para: tanque, máquina de lavar, armário despensa e dois varais para secar roupas em dias de chuva. Além de espaço para depósito de gás externo, seguro, permite sua troca sem a entrada na casa. Área 6,00m².</p>
